--- a/example/package.json
+++ b/example/package.json
@@ -21,7 +21,7 @@
     "npm-run-all": "^4.1.5",
     "postcss-cli": "^6.1.2",
     "sass": "^1.23.0",
-    "sass-repository": "git+ssh://git@gitlab.com/PrevisiteOfficial/packages/sass-repository.git"
+    "sass-repository": "git+ssh://git@github.com:jdefez/sass-repository.git"
   },
   "dependencies": {}
 }
